--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/telegram-web-app": "^7.3.1",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.2",
     "framer-motion": "^11.3.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
