--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@types/telegram-web-app": "^7.3.1",
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
+    "flickity": "^3.0.0",
     "framer-motion": "^11.3.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-tilt": "^1.0.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
